# Game

./: .gitignore  .gitmodules  CMakeLists.txt
dump/: stats.json
include/game/: Constants.hpp  Forwards.hpp  Logger.hpp  Types.hpp  Util.hpp
include/game/core/: Game.hpp  Globals.hpp  Window.hpp
include/game/core/api/: Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  DescriptorPool.hpp  DescriptorSet.hpp  Device.hpp  Framebuffer.hpp  Image.hpp  Instance.hpp  MappedBuffer.hpp  Pipeline.hpp  RenderPass.hpp  Sampler.hpp  Swapchain.hpp  VertexBuffer.hpp  VulkanContext.hpp
include/game/core/api/imgui/: ImGuiContext.hpp
include/game/core/api/renderer/: RenderGraph.hpp  Renderer.hpp
include/game/core/components/: Ball.hpp  Brick.hpp  Camera.hpp  GameObject.hpp  Mesh.hpp  Player.hpp  Texture.hpp  Transform.hpp  VertexBuffer.hpp
include/game/core/gameplay/: GameLevel.hpp  Level.hpp
resources/levels/: level1.lvl
resources/shaders/: compile.sh  generic.frag  generic.frag.spv  generic.vert  generic.vert.spv
src/: main.cpp
src/game/: STBImpl.cpp  STB_Impl.cpp  Util.cpp
src/game/core/: Game.cpp  Window.cpp
src/game/core/api/: Buffer.cpp  CommandBuffer.cpp  CommandPool.cpp  DescriptorPool.cpp  DescriptorSet.cpp  Device.cpp  Framebuffer.cpp  Image.cpp  Instance.cpp  MappedBuffer.cpp  Pipeline.cpp  RenderPass.cpp  Sampler.cpp  Swapchain.cpp  VertexBuffer.cpp  VulkanContext.cpp  VulkanMemoryAllocator.cpp
src/game/core/api/imgui/: ImGuiContext.cpp
src/game/core/api/renderer/: RenderGraph.cpp  Renderer.cpp
src/game/core/components/: Camera.cpp  GameObject.cpp  Mesh.cpp  Texture.cpp  VertexBuffer.cpp
src/game/core/gameplay/: GameLevel.cpp  Level.cpp
